adds auth in response header